added style to home page

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,29 +9,55 @@
 
 
 :root {
+    --ff-primary: 'Source Sans Pro', sans-serif;
+    --ff-secondary: 'Source Code Pro', monospace;
+
+    --fw-reg: 300;
+    --fw-bold: 900;
+
     --clr-background: #fff;
     --clr-light: #eef0f2;
     /* --clr-light: #d8c99b;   */
     --clr-dark: #273e47;
     --clr-accent: #02c39a;
     --clr-font: #000;
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
     
     --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
     0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 
+html {
+    height: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
 body {
+    height: 100%;
     font-family: 'Source Sans Pro', sans-serif;
     max-width: 1280px;
-    /* height: 100vh; */
-    font-size: 1rem;
+    font-size: 1.125rem;
     background: #eef0f2;
     margin: 0 auto;
 }
+
 img {
-    max-width: 100%;
+    max-width: 90%;
     object-fit: cover;
 }
+
+strong {
+    font-weight: var(--fw-bold);
+}
+
+h1 { font-size: var(--fs-h1) }
+h2 { font-size: var(--fs-h2) }
+h3 { font-size: var(--fs-h3) }
 
 .header {
     background-color: var(--clr-light);
@@ -39,9 +67,11 @@ img {
     background-color: var(--clr-light);
     box-shadow: var(--bs);
     margin-bottom: .5em;
-    /* border: 1px solid; */
+    font-size: 1.25rem;
+    border: 1px solid;
     display: flex;
-
+    width: 100%;
+    /* height: clamp(4em, 6vh, 6em); */
 }
 
 .nav-hamburger {
